Java Marine API release notes
Version @VERSION@ (b@BUILD_ID@)
<http://marineapi.sourceforge.net/>
Copyright (C) 2010-@YEAR@ Kimmo Tuukkanen <ktuukkan@users.sourceforge.net>

Pre-alpha preview release, not to be used in production. Major API changes may
be introduced in future versions. Released on @RELEASE_DATE@.

CHANGES

NEW FEATURES

* Added parser for HDM and HDT sentences, i.e. the vessel's magnetic and true 
  heading reports.
 
KNOWN ISSUES
  
 * Position.distanceTo() may not produce correct results.
 